<resources>
    <string name="app_name">Lab3</string>
    <string name="hello_message">Hello World!</string>
    <string name="buttonText">I\’m a button</string>

    <string name="widget_message">Here are my widgets:</string>
    <string name="button1">BUTTON</string>
    <string name="checkout_message">Check this out!</string>
    <string name="switch_message">Switch on / off</string>
    <string name="hint_message">Type your answer in here</string>
    <string name="contentDescription">Canada Flag</string>

    <string name="type_email_text">Enter your email address:</string>
    <string name="type_email">Type email here</string>
    <string name="password_text">Type your password:</string>
    <string name="login_button">LOGIN</string>
    <string name="profile_text">Your profile</string>
    <string name="name_text">Your name:</string>
    <string name="enter_name">Enter your name</string>
    <string name="email_text">Your email:</string>
    <string name="enter_email">Enter your email</string>
    <string name="picture_text">Your picture:</string>
    <string name="click_hint">Click the button above to take a picture</string>

</resources>
