<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/widget_message"
        android:textSize="30dp"/>
    <Button
        android:id="@id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button1"
        android:layout_alignParentStart="true"
        android:layout_below="@id/textView"/>
    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/flag"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/textView"
        android:contentDescription="@string/contentDescription"/>
    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkout_message"
        android:layout_below="@id/imageButton"
        android:layout_alignParentStart="true"/>
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_message"
        android:layout_below="@id/imageButton"
        android:layout_alignParentEnd="true"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_message"
        android:inputType="textPersonName"
        android:layout_below="@id/checkbox"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>